--- a/doxy.conf
+++ b/doxy.conf
@@ -68,7 +68,7 @@ OUTPUT_DIRECTORY       = docs
 # performance problems for the file system.
 # The default value is: NO.
 
-CREATE_SUBDIRS         = YES
+CREATE_SUBDIRS         = NO
 
 # If the ALLOW_UNICODE_NAMES tag is set to YES, doxygen will allow non-ASCII
 # characters to appear in the names of generated files. If set to NO, non-ASCII
@@ -417,7 +417,6 @@ LOOKUP_CACHE_SIZE      = 0
 # The default value is: NO.
 
 EXTRACT_ALL            = NO
-# EXTRACT_ALL            = YES
 
 # If the EXTRACT_PRIVATE tag is set to YES, all private members of a class will
 # be included in the documentation.
@@ -772,7 +771,7 @@ WARN_LOGFILE           = doxygen_warnings.txt
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = .
+INPUT                  =
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -797,8 +796,8 @@ INPUT_ENCODING         = UTF-8
 # *.m, *.markdown, *.md, *.mm, *.dox, *.py, *.pyw, *.f90, *.f, *.for, *.tcl,
 # *.vhd, *.vhdl, *.ucf, *.qsf, *.as and *.js.
 
-FILE_PATTERNS          = *.cc \
-                         *.h \
+FILE_PATTERNS          = *.cc, \
+                         *.h, \
                          *.doxygen
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
@@ -833,15 +832,12 @@ EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = *.tab.cc \
                          *.tab.h \
                          lex.* \
-                         Test*.cc \
-                         Test*.h \
-                         *Test.cc \
-			 */unit-tests/* \
-			 */tests/* \
-			 */gl/* \
-			 */old/* \
-			 */win32/* \
-			 */VCPP/*
+                         */unit-tests/* \
+                         */tests/* \
+                         */gl/* \
+                         */old/* \
+                         */win32/* \
+                         */VCPP/*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
